  This should, of course, only be used by people that know exactly what they are doing.
- improved the performance of SCIPcalcMIR() and SCIPcalcStrongCG() by exploiting sparsity
- better branching in SOS1/SOS2 constraints
- added ccg-reader (weighted column connectivity graph)

plugins:
- added first version of SOS type 1 constraint handler (cons_sos1.{c,h})
- added first version of SOS type 2 constraint handler (cons_sos2.{c,h})
- less aggressive scaling in linear constraint handler presolve to improve numerics
- added reader for pseudo-Boolean problems (reader_opb.{c,h})
- added first version of constraint handler cons_countsols.{c,h}
- tighter memory limits in knapsack presolve lifting procedure to avoid overly expensive presolving

parameters:
- new parameter "constraints/and/linearize" to enable linearization of all <and> constraints (in presolving),
- new parameter "constraints/linear/aggregatevariables" to search for aggregations in equations in the presolving step
- changed parameter default values for the priority of presolver "dualfix" and "inttobinary"
- new parameter "constraint/linear/upgrade/binpack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/eqknapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/invarknapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/knapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/logicor" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/setppc" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/varbound" to enable or disable the linear upgrading process
- new parameter "constraints/SOS1/branchSOS" to enable or disable branching on SOS1 constraints